# qqq-buyer-monitor

./: .coverage  .dockerignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README-CN.md  README.md  WIKI_TC.md  app.py  docker-compose.prod.yml  docker-compose.yml  generate_next_phase_artifacts.py  pyproject.toml  requirements.lock.txt  structural_audit_2020_present.csv  structural_audit_2022_present.csv  telemetry_data.csv  test_mini_audit.py  v16_mock_seed.json
artifacts/: panorama_trace.csv
conductor/: parallel_optimization_plan.md  v14_baseline_hardening_plan.md  v6_1_macro_todo.md  v6_todo.md
data/: candidate_registry_v7.json  macro_historical_dump.csv  qqq_history_cache.csv  v11_feature_library.csv  v11_full_evidence_history.csv  v11_graduation_report.csv  v11_poc_phase1_results.csv  v11_poc_phase1_results_test.csv  v11_poc_phase2_audit_results.csv  v11_poc_phase3_alpha_results.csv  v11_poc_phase3r_results.csv  v11_poc_priority3_results.csv  v11_price_vix_history.csv  v11_prior_forensic_backtest.json
docs/: PRD.md  REFERENCE_DISCORD_NOTIFIER.md  V11_5_ARCHITECT_MANUAL.md  V11_5_EXPERT_SPEC.md  V11_5_USER_PHILOSOPHY.md  V12_ORTHOGONAL_FACTOR_SPEC.md  WIKI_V11.md  adaptive_liquidity_v4.md  architecture.md  backtest_report.md  backtest_report_14_4.md  decision_monad_v6.md  divergence_features.md  fundamental_macro_v3.md  requires.md  srd_ai_interpreter_v1.md  v10.0_backtest_plan.md  v10.0_backtest_scorecard.md  v10.0_cycle_factor_add.md  v10.0_cycle_factor_spt.md  v10.0_deployment_pacing_backtest.md  v10.0_qa_plan.md  v11_beta_pacing_audit_final.md  (+39 more)
(+5128 files in other folders)
